crates/ruff_db/src/diagnostic/render/snapshots/ruff_db__diagnostic__render__full__tests__notebook_output.snap
---
source: crates/ruff_db/src/diagnostic/render/full.rs
expression: env.render_diagnostics(&diagnostics)
---
error[unused-import]: `os` imported but unused
 --> notebook.ipynb:2:8
  |
1 | # cell 1
2 | import os
  |        ^^ Remove unused import: `os`
3 | # cell 2
4 | import math
  |

error[unused-import]: `math` imported but unused
 --> notebook.ipynb:4:8
  |
2 | import os
3 | # cell 2
4 | import math
  |        ^^^^ Remove unused import: `math`
5 |
6 | print('hello world')
  |

error[unused-variable]: Local variable `x` is assigned to but never used
  --> notebook.ipynb:10:5
   |
 8 | def foo():
 9 |     print()
10 |     x = 1
   |     ^ Remove assignment to unused variable `x`
   |
