crates/ruff_db/src/diagnostic/render/snapshots/ruff_db__diagnostic__render__full__tests__notebook_output_with_diff_spanning_cells.snap
---
source: crates/ruff_db/src/diagnostic/render/full.rs
expression: env.render(&diagnostic)
---
error[F401][*]: `os` imported but unused
 --> notebook.ipynb:cell 1:2:8
  |
1 | # cell 1
2 | import os
  |        ^^
help: Remove unused import: `os`
 ::: cell 1:1:1
  |
1 - import os
  |
 ::: cell 2:1:1
  |
1 - import math
  |
 ::: cell 3:3:1
  |
3 -     x = 1
  |
note: This is an unsafe fix and may change runtime behavior
